--- a/public/index.css
+++ b/public/index.css
@@ -1,12 +1,20 @@
 body {
-    background-color: antiquewhite;
-}
-
-h1 {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color:antiquewhite;
     text-align: center;
-    margin-top: 10%;
-}
-
-h2 {
-    text-align: center;
-}
+    font-family: Arial, sans-serif;
+  }
+  
+  h1, h2 {
+    margin: 10px 0;
+  }
+  
+  #qrcode {
+    margin-top: 20px;
+  }
+  
